2007-09-19 yo
* Use absolute_url instead of absolute_url_path.

2007-09-17 Kazuhiko
* Revise design.

2007-09-06 yo
* Obtain a listbox with Form_getListbox instead of from a fixed localtion in configure_list_dialog and sort_list_dialog.

2007-09-04 Kazuhiko
* use portal_url.getPortalObject().absolute_url_path() instead of portal_url.getPortalPath() for better virtual host support.

2007-08-29 Yusei
* Add module_view action in context box.

2007-08-29 Rafael
* Updated Planning Box related stuff

2007-08-18 yo
* ERP5Site does not have getPortalType, so avoid calling getPortalType if not present.

2007-07-02 Yusei
* Fixed a invalid xhtml template.

2007-06-12 JPS
* Added MochiKit by default to handle onload events

2007-01-11 Kevin
* Fix widget alignment in bottom fieldset.

2006-09-14 Aurel
* fix removeUnpickableObject in Base_callDialogMethod to take listbox into account

2006-09-13 Kevin
* Fix developper mode rendering bug.
* erp5.js is needed in web mode by admin toolbox which display context_box_render.
* Split context macro in more macros.

2006-09-12 Kevin
* Refactor login_form screen to match new xhtml style form structure.

2006-09-08 Kevin
* Don't display action box in default web view and factorize conditions.

2006-09-07 jerome
* fix <title>s

2006-09-07 Kevin
* Render field CSS classes on the div.field instead on the label for better styling.
* Fix JP "missing" statement.

2006-09-04 Kevin
* Don't render non-editable fields in span.

2006-09-01 Kevin
* Fix hidden developper shortcuts.
* Add support for title _and_ id on groups (see form_render and ERP5XhtmlStyle_getFormGroupTitleAndId comments for details).

2006-08-31 Kevin
* Render non editable field in a span.
* Display edit tabs in web editable_mode.

2006-08-29 Chris
* Added an easy way to customize erp5 using new CSS/JS files. You just need to redefine ERP5Site_getCSSList and ERP5Site_getJSList to return your new files too.

2006-08-29 Kevin