@@ -1,0 +1,112 @@
+<?xml version="1.0"?>
+<ZopeData>
+  <record id="1" aka="AAAAAAAAAAE=">
+    <pickle>
+      <tuple>
+        <global name="Image" module="OFS.Image"/>
+        <tuple/>
+      </tuple>
+    </pickle>
+    <pickle>
+      <dictionary>
+        <item>
+            <key> <string>_EtagSupport__etag</string> </key>
+            <value> <string>ts90540175.03</string> </value>
+        </item>
+        <item>
+            <key> <string>__ac_local_roles__</string> </key>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>__name__</string> </key>
+            <value> <string>favicon.ico</string> </value>
+        </item>
+        <item>
+            <key> <string>content_type</string> </key>
+            <value> <string>image/x-ico</string> </value>
+        </item>
+        <item>
+            <key> <string>data</string> </key>
+            <value> <string encoding="base64">AAABAAIAEBAAAAAAAABoBQAAJgAAACAgAAAAAAAAqAgAAI4FAAAoAAAAEAAAACAAAAABAAgAAAAA
+AEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wCegV8AzsCvALaghgDl3dQA8e3oAMKwmwCpj3EA
+3NHFAPj18wDVyboAvKiQAMi4pQDr5t8Ar5Z6AKSJaQDi2c4A0sS0AJt9WgC5pIwA7unjAKyTdgCz
+nYIAy7upAMWznwD6+PcA18y+AL6qlAD28/AAoINiAKaLbADTxrcA0MKxAJx/XADw6+YAqI1vAOTb
+0gDBrpkAxrWhAOvk3QC3oYgAuKOKAMe3owCdgF4A0cOzAM/BsADKuqgAm35bALqljADs5t8AqI5v
+AK6WegC4o4sAwa+ZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAABMTExMTExMTExMTExMTExMTExMTMQklEiksExMTExMTExMTFAEH
+HjMhJQITExMTExMTEyQFExMTExsRIhMTExMTExMTNhMTExMIARcTExMTExMTExMTExMTMBouExMT
+ExMTExMTExMTEywaJRMTExMTExMTEw8TExMqASATExMTExMTExMFLTUDHQofExMTExMTExMTIDQN
+Cy8QExMTExMTExMTEyYMExMTExMTExMTExMTExMPLRMTExMTExMTExMTExMTAgUTExMTExMTExMT
+ExMTExMOMiMGFSgWExMTExMTExMTHBgrGScNBBMTExMTExMTExMTExMTExMTExMAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKAAA
+ACAAAABAAAAAAQAIAAAAAACABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8AnoFfAM6/rgDm3tYA
+tZ+FAPPv6wDCsJsA2c7BAKmPcQC8qJAA7ejhAODXzACvlnoAyLekAPr49gCkiGgA08a3ALijiwD3
+9PEAm31aAN3TxwCym4AA1sq8APDs5gC/q5UAxbSfAMq7qAChhWQA/Pv6AKeMbQDRw7MA6+XeAOjh
+2QD18u4Aq5F0AK2UdwDi2c8A29HEAPj29AClimsA2My+ANXIuQDMvawA/v39AJ1/XQCfg2EAoodm
+AO/q5AC0nYMA39XKAMCtlwDDsp0A8e3oAKiNbwCxmn4AvamSANDCsQDGtaEAzLyqAPv6+QCcflsA
+9vPwAPTw7ADu6eMArpV5AN7UyQC5pIwAvqqTANLEtADHtqIA/v7+AP39/AD6+fcAn4JgAKCDYgD4
+9fMA9/XyAKOHZwD08e4ApotrAKiOcADr5t8ArZV4ALSehADZzcAAvquUANbJuwDTxbYAyrqnAJt+
+WwCdgF0A9fLvAPPw7ADw7OcAqI5vAPDr5gDm3tUA4tnOAN7VyQDZzsAAw7CbAMSynQDVyLoAyrqo
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUFBQUFBQUFBQUFBQUFBQUFBQUFBQU
+FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUAhYzAx8a
+EksUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFEQGAQFJUk8BD2cJFBQUFBQUFBQUFBQUFBQUFBQUFBRV
+AQFABVoUFBA5LEkKFBQUFBQUFBQUFBQUFBQUFBQUFEUBXRwUFBQUFBQxSAFZFBQUFBQUFBQUFBQU
+FBQUFBQUOAEzFBQUFBQUFBRFAUdUFBQUFBQUFBQUFBQUFBQUFBRfASMUFBQUFBQUFC4/ASIcFBQU
+FBQUFBQUFBQUFBQUFBRNUBQUFBQUFBQUFGUBAUYUFBQUFBQUFBQUFBQUFBQUFBovFBQUFBQUFBQU
+UwEBMBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQCSAEBJBQUFBQUFBQUFBQUFBQUFBQUFBQU
+FBQUFBQUFBQwAQEKFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFCEBAWgUFBQUFBQUFBQUFBQU
+FBQUFBQUFBQUFBQUFBQUXAEBOhQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFCgBAQEFFBQUFBQU
+FBQUFBQUFBQUFBQUB1YUFBQUFBQUFwEBHU4UFBQUFBQUFBQUFBQUFBQUFBRXASpbFBQUWg5IAQEb
+FBQUFBQUFBQUFBQUFBQUFBQUFDQdYxMMKylAAQEBJS0UFBQUFBQUFBQUFBQUFBQUFBQUNwFREiAd
+AQFHGBkUFBQUFBQUFBQUFBQUFBQUFBQUFBQuR0QUFD0JQUoUFBQUFBQUFBQUFBQUFBQUFBQUFBQU
+FBReWBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFEIhFBQUFBQUFBQUFBQUFBQUFBQUFBQU
+FBQUFBQUFBQUOzwtFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBRDAQ0UFBQUFBQUFBQUFBQU
+FBQUFBQUFBQUFBQUFBQUFB4BZhQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFCdkFBQUFBQU
+FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUBD4IFWJhIWElMiYpEBQUFBQUFBQUFBQUFBQUFBQUFBQR
+AQEBAQEBAQEBAQFVFBQUFBQUFBQUFBQUFBQUFBQUFDMBATxMP2ALMDUGXCc2FBQUFBQUFBQUFBQU
+FBQUFBQUWkpaFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQU
+FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=</string> </value>
+        </item>
+        <item>
+            <key> <string>precondition</string> </key>
+            <value> <string></string> </value>
+        </item>
+        <item>
+            <key> <string>size</string> </key>
+            <value> <long>3638</long> </value>
+        </item>
+        <item>
+            <key> <string>title</string> </key>
+            <value> <string></string> </value>
+        </item>
+      </dictionary>
+    </pickle>
+  </record>
+</ZopeData>
